Correct inquiry marker optical alignment

--- a/styles.css
+++ b/styles.css
@@ -2472,6 +2472,7 @@ footer {
   font-size: 18px;
   font-weight: 300;
   line-height: 1;
+  transform: translateX(3px);
 }
 
 .newsletter-signup {
